Custom exceptions - implemention on progress

--- a/BlogApi/appsettings.json
+++ b/BlogApi/appsettings.json
@@ -16,7 +16,7 @@
   "Jwt": {
     "Issuer": "https://www.blogapi.com/",
     "Audience": "https://www.blogapi.com/",
-    "Key": "HelloWorld"
+    "Key": "how do you turn this on"
   }
 }
 
