--- a/BlogApi/BlogApi.csproj
+++ b/BlogApi/BlogApi.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.1" />
     <PackageReference Include="JWT" Version="10.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
+    <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,10 +30,15 @@
     <None Remove="Services\" />
     <None Remove="JWT" />
     <None Remove="System.IdentityModel.Tokens.Jwt" />
+    <None Remove="Tests\" />
+    <None Remove="xunit" />
+    <None Remove="Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Config\" />
     <Folder Include="Services\" />
+    <Folder Include="Tests\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
