Dockerized the Application

--- a/BlogApi/appsettings.Development.json
+++ b/BlogApi/appsettings.Development.json
@@ -4,6 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "database": "blog",
+    "user": "root",
+    "server": "localhost",
+    "port": "3306",
+    "password": ""
   }
 }
 
