--- a/BlogApi/appsettings.json
+++ b/BlogApi/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "database": "blog",
+    "database": "Blog",
     "user": "root",
-    "server": "localhost",
+    "server": "blog-app.cdgkfoacvf6u.us-east-1.rds.amazonaws.com",
     "port": "3306",
-    "password": ""
+    "password": "12345678"
   },
   "Jwt": {
     "Issuer": "https://www.blogapi.com/",
